# LhcVaspTools

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: BasicUtils.py  OamExts.py  PhaseExts.py
src/LhcVaspTools/: BasicUtils.py  PhaseExts.py
src/LhcVaspTools/scripts/: deterCrossBands.py  extractEFermi.py  genBands.py  genBandsWithOam.py  genBandsWithWeights.py  genElecDnstyCrsSec.py  genElecDnstyCrsSecWithOam.py  genEnergyCutCrsSec.py  genKpointsPlane.py  genWeightsOnEachBand.py  plotBands.py  plotBandsWithOam.py  plotBandsWithWeights.py  plotElecDnstyCrsSec.py  plotElecDnstyCrsSecWithOam.py  plotEnergyCutCrsSec.py
